# ckan-docker

./: README.md
src/ckanext-rufaro/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-rufaro/.github/workflows/: test.yml
src/ckanext-rufaro/ckanext/rufaro/: cli.py  helpers.py  plugin.py  views.py
src/ckanext-rufaro/ckanext/rufaro/assets/: script.js  webassets.yml
src/ckanext-rufaro/ckanext/rufaro/logic/: action.py  auth.py  schema.py  validators.py
src/ckanext-rufaro/ckanext/rufaro/tests/: test_helpers.py  test_plugin.py  test_views.py
src/ckanext-rufaro/ckanext/rufaro/tests/logic/: test_action.py  test_auth.py  test_validators.py
