[metadata]
name = ckanext-rufaro
version = 0.0.1
description = New extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rufaro-dato/ckanext-rufaro
author = Rufaro dato
author_email = rufaro.nyakudya@datopian.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN rufaro-dato

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             rufaro = ckanext.rufaro.plugin:RufaroPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/rufaro/i18n/ckanext-rufaro.pot
width = 80

[init_catalog]
domain = ckanext-rufaro
input_file = ckanext/rufaro/i18n/ckanext-rufaro.pot
output_dir = ckanext/rufaro/i18n

[update_catalog]
domain = ckanext-rufaro
input_file = ckanext/rufaro/i18n/ckanext-rufaro.pot
output_dir = ckanext/rufaro/i18n
previous = true

[compile_catalog]
domain = ckanext-rufaro
directory = ckanext/rufaro/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
